--- a/AuftragsVerwaltung/TODO
+++ b/AuftragsVerwaltung/TODO
@@ -1,7 +1,7 @@
 NOTES
 
 DB-Felder:
-ID|DATUM|ORT|STRAßE|AUFTRAGSGEBER|STATUS
+ID|DATUM|ORT|PLZ|STRAßE|AUFTRAGSGEBER|STATUS
 
 Stati: In Arbeit,Bericht verschickt, Wiedervorlage, OK, gezahlt, mahnung
 
