--- a/AuftragsVerwaltung/TODO
+++ b/AuftragsVerwaltung/TODO
@@ -1,5 +1,28 @@
+E-Mail an Armin, detlef (mail@)
+auftraggeber importieren
+testdaten löschen
+favicon
+user für sabine
 
-reports (v2)
+
+--> 9100 auto increment start
+
+
+Aufträge: + Details
+
+AFUTRAGGEBER: Adresse splitten, importieren
+
+NAS
+RTRR Jobs
+Mysql Replikation
+Mails on Raid fail?
+
+Doks:
+- Backup
+- Physik
+- Messaging
+
+Datenanalyse (v2)
  + googlemaps
  + overview
  + tabellen
