--- a/AuftragsVerwaltung/TODO
+++ b/AuftragsVerwaltung/TODO
@@ -7,6 +7,7 @@ user für sabine
 
 --> 9100 auto increment start
 
+CONFIG: Use Server_PORT for Linking to owncloud. (should be the same)
 
 Aufträge: + Details
 
