Auftraggeber: Adresse substituted by detailed dataset Some Debugging Config: Now Using $_SERVER[HTTP_PORT] as owncloud Link Updating TODO Preparing for Detailed Info on Auftrag

--- a/AuftragsVerwaltung/TODO
+++ b/AuftragsVerwaltung/TODO
@@ -1,22 +1,14 @@
 E-Mail an Armin, detlef (mail@)
-auftraggeber importieren
+
 testdaten löschen
-favicon
-user für sabine
+
+user für sabine anlegen
 
 
---> 9100 auto increment start
 
-CONFIG: Use Server_PORT for Linking to owncloud. (should be the same)
 
-Aufträge: + Details
 
-AFUTRAGGEBER: Adresse splitten, importieren
 
-NAS
-RTRR Jobs
-Mysql Replikation
-Mails on Raid fail?
 
 Doks:
 - Backup
